Satellite image downloader added

--- a/asset/styles.css
+++ b/asset/styles.css
@@ -409,7 +409,7 @@ body {
 
 .map-text-label {
     font-size: 13px;
-    color: black;       
+    color: yellow;       
     padding: 5px;
     border-radius: 5px;
 }
